samples/_failures_safe/1761418070_d2299c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e157fa9b.c: In function ‘main’:
./samples/SAFE/__tmp_e157fa9b.c:147:9: error: expected declaration or statement at end of input
  147 |         return EXIT_FAILURE;
      |         ^~~~~~
./samples/SAFE/__tmp_e157fa9b.c:147:9: error: expected declaration or statement at end of input
